[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dragonfly"
authors = [{name = "Christo Butcher", email = "dist.dragonfly@twizzy.biz"}]
readme = "README.rst"
description="Speech recognition extension library"
version="0.35.0"


 classifiers=[
                   "Development Status :: 4 - Beta",
                   "Environment :: Win32 (MS Windows)",
                   "Environment :: X11 Applications",
                   "Environment :: MacOS X",
                   "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
                   "Intended Audience :: Developers",
                   "Operating System :: Microsoft :: Windows",
                   "Operating System :: POSIX",
                   "Operating System :: MacOS",
                   "Programming Language :: Python :: 2.7",
                   "Programming Language :: Python :: 3.4",
                   "Programming Language :: Python :: 3.5",
                   "Programming Language :: Python :: 3.6",
                   "Programming Language :: Python :: 3.7",
                   "Programming Language :: Python :: Implementation :: CPython",
                   "Topic :: Multimedia :: Sound/Audio :: Speech",
                   "Topic :: Software Development :: Libraries :: Python Modules",
                  ]

dependencies=[
        "setuptools >= 40.0.0",
        "packaging >= 19.0",
        "six",
        "lark-parser == 0.8.*",

        # Windows-only dependencies.
        "comtypes;platform_system=='Windows'",
        "pywin32;platform_system=='Windows'",

        # Linux dependencies.
        # "python-libxdo;platform_system=='Linux'",
        # "Xlib;platform_system=='Linux'",
        "psutil >= 5.5.1;platform_system=='Linux'",
        "pynput >= 1.7.6;platform_system=='Linux'",

        # Mac OS dependencies.
        "pynput >= 1.7.6;platform_system=='Darwin'",
        "pyobjc >= 5.2;platform_system=='Darwin'",
        "py-applescript == 1.0.0;platform_system=='Darwin'",
        "pyperclip >= 1.7.0;platform_system=='Darwin'",
        ]

[project.urls]
Home = "https://github.com/dictation-toolbox/dragonfly/"


[project.optional-dependencies]
accessibility= [
                "enum34;python_version<'3.4'",
                "regex<2022.1.18;python_version<='2.7'",
                "regex;python_version>'2.7'",
                ]
sphinx= [
        "sphinxwrapper >= 1.2.0",
        "pyjsgf >= 1.7.0",
        "pyaudio"
        ]

kaldi= [
        # NOTE: Remember to also update engine.py to the same version!
        "kaldi-active-grammar ~= 3.1.0",
        "sounddevice == 0.3.*",
        "webrtcvad-wheels == 2.0.*",
        ]


